--- a/views/partials/tool/background.html
+++ b/views/partials/tool/background.html
@@ -79,14 +79,14 @@
   </div-->
 
   <div class="" v-show="background_mode=='image'" v-if="active_space">
-    <div class="background-image" v-bind:style="{height: '233px', 'background-image':'url('+active_space.advanced.background_uri+')', 'margin': '6px', 'border-radius': '3px'}" v-if="active_space.advanced.background_uri && !space_background_uploading">
+    <div class="background-image" v-bind:style="{height: '233px', 'background-image':'url('+active_space.background_uri+')', 'margin': '6px', 'border-radius': '3px'}" v-if="active_space.background_uri && !space_background_uploading">
     </div>
         
     <div class="progress state-processing" v-if="space_background_uploading"> 
       <div class="spinner"></div>
     </div>
 
-    <div class="dialog-section no-b adapt" v-if="!active_space.advanced.background_uri && !space_background_uploading" v-on:touchstart="handle_touch_select_background_image()">
+    <div class="dialog-section no-b adapt" v-if="!active_space.background_uri && !space_background_uploading" v-on:touchstart="handle_touch_select_background_image()">
       <label class="btn btn-xxl btn-transparent btn-icon">
         <span class="icon icon-picture-upload"></span>
         <input id="background-uploader" type="file" accept="image/*" v-on:change="handle_section_background_upload($event)">
@@ -94,9 +94,9 @@
       <p>[[__("upload_background_caption")]]</p>
     </div>
 
-    <div class="dialog-section no-p no-flex" v-if="active_space.advanced.background_uri">
+    <div class="dialog-section no-p no-flex" v-if="active_space.background_uri">
       <div class="btn-cluster">
-        <label class="btn btn-transparent btn-block text-center" v-if="active_space.advanced.background_uri" v-on:touchstart="handle_touch_select_background_image()"> 
+        <label class="btn btn-transparent btn-block text-center" v-if="active_space.background_uri" v-on:touchstart="handle_touch_select_background_image()"> 
           <input id="background-uploader" type="file" accept="image/*" v-on:chang="handle_section_background_upload($event)">
           <span class="icon icon-picture-upload"></span>
           <!-- Upload -->
