--- a/views/partials/tool/text-styles.html
+++ b/views/partials/tool/text-styles.html
@@ -24,6 +24,6 @@
     <!--button class="btn btn-transparent btn-icon-labeled" v-on:click="apply_formatting($event,'insertUnorderedList')">
       <span class="icon icon-text-list-bullet"></span>
       <span class="icon-label">Bullets</span>
-    </button-->
+    </button--!>
   </div>
 </div>
