--- a/styles/handles.scss
+++ b/styles/handles.scss
@@ -69,26 +69,27 @@
 }
 
 .handles {
-  // background-color: rgba(40,140,215,0.45);
-  border: 1px solid rgba(255,255,255,0.5);
+  //border: 1px solid rgba(255,255,255,0.5);
   position: absolute;
   left: 0;
   top: 0;
-  bottom: 0;
+  bottom: -1;
   right: 0;
   z-index: 800;
   pointer-events: none;
   
+  background: rgba(255,255,255,0.1);
+  
   &:after{
-    border: 1px dotted rgba(40,140,215,1);
+    border: 4px dotted #000000;
     content: "";
     display: block;
     position: absolute;
     height: auto;
     width: auto;
-    top: -1px;
-    left: -1px;
-    right: -1px;
+    top: 0px;
+    left: 0px;
+    right: 0px;
     bottom: -1px;
   }
 }
@@ -97,7 +98,7 @@
   border: 8px solid rgba(255,255,255,0.5);
   
   &:after{
-    border: 8px dotted rgba(40,140,215,1);
+    border: 8px dotted #000000;
     top: -4px;
     left: -4px;
     right: -4px;
@@ -332,16 +333,15 @@
   pointer-events:auto;
   z-index: 2000;
   position: absolute;
-  width: 30px !important;
-  height: 30px !important;
   border-radius: 100%;
-  margin: -15px;
 
-  border: 1px solid rgba(0,0,0,0.25);
-
+  border: 1px solid black;
+  margin: -5px;
+  padding: 4px;
+  
   &:hover {
-    background-color: rgba(255,255,255,0.5);
-    cursor: move;
+      background-color: black;
+      cursor: move;
   }
 }
 
@@ -428,15 +428,8 @@
     border-style: solid;
     border-width: 10px;
     border-color: transparent;
-    -webkit-background-clip: padding-box;
-       -moz-background-clip: padding-box;
-            background-clip: padding-box;
-
-    -webkit-transition: all .05s ease-in-out;
-       -moz-transition: all .05s ease-in-out;
-        -ms-transition: all .05s ease-in-out;
-         -o-transition: all .05s ease-in-out;
-            transition: all .05s ease-in-out;
+    background-clip: padding-box;
+    transition: all .05s ease-in-out;
   }
 
   div {
