--- a/styles/table.scss
+++ b/styles/table.scss
@@ -8,10 +8,9 @@
 }
 .table {
   width: 100%;
-  color: $medium;;
   font-family: $main-font;
-  // border-radius: $radius;
-  // border: 2px solid rgba(0,0,0,0.0125) !important;
+  border-radius: $radius;
+  border: 2px solid rgba(0,0,0,0.0125);
 }
 
 .table thead > tr > th:first-child, 
