--- a/styles/toolbar.scss
+++ b/styles/toolbar.scss
@@ -19,50 +19,19 @@
   }
 
   margin: auto;
-  //text-align: center;
   position: fixed;
-  bottom: 0px;
-  //width: 100%;
+  top: 10px;
   z-index: 3000;
-  padding: $gutter-b;
+  padding: 0;
   font-size: 0;
   line-height: 0;
 
-  transition-duration: 0.15s;
-  transition-timing-function: ease-in-out;
-  transition-delay: initial;
-  transition-property: opacity, transform;
-  @include backface-visibility(hidden);
+  // FIXME questionable?
   
-  @include translate3d(0, 10px, 0);
   pointer-events: none !important; 
-  opacity: 0;
-  
-  &.out {
-    @include translate3d(0, 10px, 0);
-    * {pointer-events: none !important; }
-    button, input, .dialog {
-      display: none;
-    }
-  }
-
-  &.in {
-    @include translate3d(0, 0, 0);
-
-    &.out {
-      @include translate3d(0, 10px, 0);
-      * {pointer-events: none !important; }
-    }
-  }
   
   > * {
-    margin: 0 2px;
-    margin-top: 4px;
     pointer-events: auto !important; 
-    &.out {
-      margin: 0;
-      opacity: 0;
-    }
   }
 
   &.toolbar-vertical {
@@ -187,7 +156,6 @@
 }
 
 .toolbar-properties {
-  bottom: 64px;
   z-index: 0;
 
   &.in {
@@ -196,12 +164,12 @@
 
   .icon-sm {
     z-index: 110;
-    background-color: #222;
+    //background-color: #222;
     border-radius: 50px;
   }
 
   .jewel {
-    border: 2px solid rgba(255,255,255,0.5);
+    border: 2px solid #888;
     background-color: transparent;
     color: #989898;
     width: 36px;
@@ -228,5 +196,15 @@
 
 .toolbar-elements > .btn-group,
 .toolbar-properties > .btn-group {
-  box-shadow: 0 0 30px rgba(0,0,0,0.5);
+    //box-shadow: 0 0 30px rgba(0,0,0,0.5);
+    background-color: $white;
 }
+
+.toolbar-elements {
+    left: 10px;
+}
+
+.toolbar-properties {
+    right: 20px;
+}
+
