--- a/views/partials/space.html
+++ b/views/partials/space.html
@@ -1,131 +1,3 @@
-<!-- FIXME modal -->
-<div class="modal" v-if="(duplicate_folders.length > 0)" v-cloak>
-  <div class="modal-wrapper">
-    <div class="modal-dialog">
-
-      <button type="button" class="btn btn-icon btn-light btn-round close" v-on:click="duplicate_folders = []">
-        <span class="icon icon-cross-1"></span>
-      </button>
-
-      <div class="modal-content">
-        <div class="modal-body labels-inline">
-          <div class="modal-section">
-            
-            <div class="form-group">
-              <label>
-                [[__("duplicate_destination")]]
-              </label>
-            </div>
-            
-            <div class="form-group">
-              <select v-on:change="duplicate_folder_id=$event.target.value">
-                <option v-for="f in duplicate_folders" value="{{f._id}}">{{f.name}}</option>
-              </select>
-            </div>
-
-            <div class="form-group">
-              <button class="btn btn-md btn-round btn-primary" v-on:click="duplicate_folder_confirm(); ">
-                <span class="icon-label">[[__("ok")]]</span>
-              </button>
-              
-              <button class="btn btn-md btn-round btn-darken pull-right" v-on:click="duplicate_folders = [];">
-                <span class="icon-label">[[__("cancel")]]</span>
-              </button>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div v-cloak class="header-left" v-show="active_space_loaded">
-  <div class="btn-group dark">
-
-    <div class="pull-left">
-      <a
-         class="btn btn-stroke-darken btn-md btn-round btn-icon"
-         title="[[__("home")]]" href="/spaces"
-         v-if="(logged_in && !embedded && !active_space.parent_space_id && !guest_nickname)">
-        <span class="icon icon-home"></span>
-      </a>
-
-      <a
-         class="btn btn-stroke-darken btn-md btn-round btn-icon"
-         title="[[__("parent_folder")]]"
-         href="/folders/{{active_space.parent_space_id}}"
-         v-if="(active_space.parent_space_id && !guest_nickname)">
-
-        <span class="icon icon-arrow-left-light"></span>
-      </a>
-
-      <input class="input input-md input-transparent w-auto"
-             id="space-title"
-             v-model="active_space.name" name="title" v-on:keydown="save_space_keydown($event)"
-             v-if="space_editing_title && logged_in" style="padding-right:0" v-focus>
-
-      <span class="input input-md input-transparent w-auto"
-            v-if="!space_editing_title && logged_in"
-            v-on:click="edit_space_title()">{{active_space.name}}</span>
-
-      <span v-if="!logged_in" class="btn btn-dark btn-round btn-md">{{active_space.name}}</span>
-
-      <button class="btn btn-md btn-transparent btn-icon" v-if="space_editing_title" v-on:click="save_space_keydown()">
-        <span class="icon icon-check"></span>
-      </button>
-
-      <div class="dropdown top left light" v-bind:class="{open: active_dropdown=='space'}">
-        <button class="btn btn-md btn-icon btn-dark" v-on:click="activate_dropdown('space')">
-          <span class="icon icon-triangle-down"></span></button>
-
-        <div class="dropdown-menu" role="menu">
-          <ul class="select-list">
-            
-            <li v-on:click="activate_access()" v-if="logged_in">
-              <span>
-                <span class="icon icon-sm icon-share"></span>
-                <span>[[  __('share') ]]</span>
-              </span>
-            </li>
-            
-            <li v-on:click="edit_space_title()" v-if="logged_in">
-              <span>
-                <span class="icon icon-sm icon-tag"></span>
-                <span>[[  __('rename') ]]</span>
-              </span>
-            </li>
-
-            <li v-on:click="duplicate_space_into_folder()" v-if="logged_in">
-              <span>
-                <span class="icon icon-sm icon-duplicate"></span>
-                <span>[[  __('duplicate') ]]</span>
-              </span>
-            </li>
-            
-            <li v-on:click="download_space()">
-              <span>
-                <span class="icon icon-sm icon-download"></span>
-                <span>[[  __('download_space') ]]</span>
-              </span>
-            </li>
-
-            <li v-on:click="activate_modal('support')" v-if="logged_in">
-              <span>
-                <span class="icon icon-sm icon-info"></span>
-                <span>[[  __('support') ]]</span>
-              </span>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-  <span class="btn btn-red btn-md" id="offline-indicator" v-bind:class="{offline: was_offline}" v-on:click="show_offline_help()">[[__("offline")]]</span>
-</div>
-
 <div v-cloak class="header-right" v-if="active_space_loaded">
 
   <span v-for="active_user in active_space_users" >
@@ -140,14 +12,8 @@
 
     </button>
   </span>
-
-  <div class="btn-group dark" v-if="active_space_role!='viewer'">
-    <button class="btn btn-md btn-transparent btn-icon" title="Start Presentation (others follow what you see)" v-on:click="toggle_present_mode()" v-bind:class="{open:present_mode}">
-      <span class="icon icon-presentation"></span>
-    </button>
-  </div>
   
-  <div class="btn-group dark round" v-if="zones.length">
+  <div class="btn-group light round" v-if="zones.length">
     <button class="btn btn-md btn-transparent btn-icon" v-on:click="go_to_previous_zone()" title="[[__("Previous Zone")]]">
       <span class="icon icon-triangle-4-left"></span>
     </button>
@@ -158,17 +24,13 @@
       <span class="icon icon-triangle-4-right"></span>
     </button>
   </div>
-  
-  <!--button class="btn btn-md btn-dark btn-round btn-icon" v-on:click="download_space()" title="[[__("download_space")]]">
-    <span class="icon icon-download"></span>
-  </button-->
 
-  <div class="btn-group dark" id="meta-toggle" style="margin-right:10px">
+  <!--div class="btn-group light" id="meta-toggle" style="margin-right:10px">
     <button class="btn btn-md btn-transparent btn-icon" v-on:click="toggle_meta()" title="[[__("chat")]]">
       <span class="jewel" style="color: white; background-color: red" v-if="meta_unseen>0">{{meta_unseen}}</span>
       <span class="icon icon-messages"></span>
     </button>
-  </div>
+  </div-->
 </div>
 
 {% include "./tool/toolbar-elements.html" %}
@@ -206,7 +68,7 @@
 
   <div id="space-clipboard" style="position:fixed;top:0;left:0;z-index:0;opacity:0;background-color:white"><textarea v-model="selected_artifacts_json" cols="2" rows="2" id="clipboard-ta" class="mousetrap"></textarea></div>
 
-  <div class="space-bounds" v-bind:style="{width: active_space.width*bounds_zoom + 'px', height: active_space.height*bounds_zoom + 'px', 'background-color': active_space.background_color}"></div>
+  <div class="space-bounds" v-bind:style="{width: (active_space.width*bounds_zoom+1000) + 'px', height: (active_space.height*bounds_zoom+1000) + 'px', 'background-color': active_space.background_color}"></div>
 
   <div class="wrapper"
        v-bind:style="{
@@ -244,7 +106,6 @@
             <a class="link btn btn-round btn-primary btn-sm" v-if="a.view.link" v-bind:href="a.view.link" target="_blank">{{a.view.link_caption}}</a>
           </span>
 
-          <div class="btn btn-xs btn-icon btn-round btn-primary edit" v-show="editing_artifact_id!=a._id && is_selected(a)" v-on:touchstart="delayed_edit_artifact($event)"><span class="icon icon-pencil" v-on:click="toggle_selected_artifact_editing(true)" v-on:"touchstart:delayed_edit_artifact($event)"></span></div>
           <input v-show="is_selected(a)" type="text" id="ios-focuser-{{a._id}}" class="ios-focuser">
         </div>
 
@@ -463,7 +324,7 @@
 </div>
 
 <div v-if="active_space_loaded" v-cloak>
-  <div id="minimap"
+  <!--div id="minimap"
        v-bind:style="{width: ''+(active_space.width/minimap_scale)+'px', height: ''+(active_space.height/minimap_scale)+'px', bottom: '66px', right: '20px'}"
        v-if="active_space"
         v-on:mousedown="handle_minimap_mousedown($event)"
@@ -475,17 +336,16 @@
         v-on:mouseup="handle_minimap_mouseup($event)">
     <div v-for="a in active_space_artifacts" v-bind:style="{left: ''+(a.x/minimap_scale)+ 'px',  top: ''+(a.y/minimap_scale) + 'px', width: ''+(a.w/minimap_scale)+ 'px', height: ''+(a.h/minimap_scale) + 'px'}"></div>
     <div class="window" v-bind:style="{left: ''+(scroll_left/minimap_scale) + 'px', top: ''+(scroll_top/minimap_scale)+ 'px', width: ''+(window_width/minimap_scale)+ 'px', height: ''+(window_height/minimap_scale) + 'px'}"></div>
+  </div-->
 
-  </div>
-
-  <div class="btn-group dark" style="position:absolute;bottom:20px;right:20px;">
-    <button class="btn btn-icon btn-md btn-transparent" v-on:click="zoom_in()">
+  <div class="btn-group light zoom-bar" style="position:absolute;bottom:20px;right:20px;">
+    <button class="btn btn-icon btn-md btn-white" v-on:click="zoom_in()">
       <span class="icon icon-plus"></span>
     </button>
-    <button class="btn btn-md btn-transparent no-p" v-on:click="zoom_to_original()">
+    <button class="btn btn-md btn-white no-p" v-on:click="zoom_to_original()">
       {{viewport_zoom_percent}}%
     </button>
-    <button class="btn btn-icon btn-md btn-transparent" v-on:click="zoom_out()">
+    <button class="btn btn-icon btn-md btn-white" v-on:click="zoom_out()">
       <span class="icon icon-minus"></span>
     </button>
   </div>
