--- a/views/spacedeck.html
+++ b/views/spacedeck.html
@@ -9,13 +9,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
     <link href="[[ '/images/favicon.png' | cdn ]]" rel="icon" type="image/x-icon" />
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,800,300|Montserrat:400,700|EB+Garamond|Vollkorn|Lato|Roboto|Source+Code+Pro|Ubuntu|Raleway|Playfair+Display|Crimson+Text' rel='stylesheet' type='text/css'>
-    <link type="text/css" rel="stylesheet" href="https://fast.fonts.net/cssapi/ee1a3484-4d98-4f9f-9f55-020a7b37f3c5.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="[[ '/stylesheets/style.css' | cdn ]]">
 
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
-    
-    <script src="//cdnjs.cloudflare.com/ajax/libs/twemoji/1.3.2/twemoji.min.js"></script>
 
     <script>
       window.socket_auth = '[[socket_auth]]';
